--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: hrmoro's Site
-description: Welcome to my GitHub Pages
+title: hrmoro's Blog
+description: 我的个人博客
 theme: jekyll-theme-minimal
+permalink: /:year/:month/:day/:title/
